--- a/index.html
+++ b/index.html
@@ -1,117 +1,80 @@
-<!doctype html>
-<html class="no-js" lang="">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <!-- Place favicon.ico in the root directory -->
-
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-        <style>
-        /*body::-webkit-scrollbar { width: 0 !important }*/
-        .aa {
-            background: orange;
-            /*height:auto;*/
-            width:300px;
-            position:relative;
-            display:none;
-        }
-        .bb {
-            /*opacity: .4;*/
-            left:45%;
-            top:30%;
-            /*width:30px;
-            height:100px;*/
-            position:relative;
-            border-left: 100px solid orange;
-            border-top: 50px solid transparent;
-            border-bottom: 50px solid transparent;
-            height: 100px;
-            width: 0;
-
-        }
-        main {
-            position:fixed;
-            top:0;
-            /*background-color: green;*/
-        }
-        </style>
-    </head>
-    <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-
-        <!-- Add your site or application content here -->
-        <main>
-            <div class="aa"></div>
-            <div class="bb"></div>
-        </main>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <!--<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>-->
-        <script>
-            var _h=document.body.scrollHeight,
-                _w=document.body.scrollWidth;
-
-            $(document).ready(function(){
-                $('main').height(_h);
-                $('main').width(_w);
-                $('.aa').height(_h);
-                _bborileft = $('.bb').position().left;
-                $('body').height(_h);
-                $('body').css('padding-top',(_bborileft/2)+'px');
-                $('body').css('padding-bottom','200px');
-                $(window).scroll(function(){
-                console.log();
-                var _scrolling0 = $(this).scrollTop(),//捲動的距離
-                    _scrolling = $('main').offset().top;
-                    _mainTop = $('main').position().top;
-                    _winHeight = $(this).height(),//瀏覽器視窗高
-                    _winWidth = $(this).width(),//瀏覽器寬度
-                    _position = $('.bb').position().top,
-                    _bbleft = $('.bb').position().left,
-                    _bbheight = $('.bb').height(),
-                    _bbwidth = $('.bb').width(),
-                    _dochei = $(document).height(),
-                    _winscrotop = $(window).scrollTop(),
-                    b=_scrolling/_bborileft*100;
-                    //if()
-                    $('.bb').css('left',b+'%');
-                    bpx=$('.bb').css('left').replace(/[^-\d\.]/g, '');
-                    $('.bb').css('height',(_winHeight*(_bborileft-bpx)/_bborileft)-100+'px');
-                    $('.bb').css('top',_winHeight*bpx/(2*_bborileft)+'px');
-                    $('.bb').css('border-left-width',200*(_bborileft-bpx)/_bborileft+'px');
-                    $('.bb').css('border-top-width',50*(_bborileft-bpx)/_bborileft+'px');
-                    $('.bb').css('border-bottom-width',50*(_bborileft-bpx)/_bborileft+'px');
-                    $('.bb').css('opacity',1-1.2*bpx/_bborileft);
-                    console.log(bpx);
-                    //add = 300,//動畫起始的位置
-                    //speed = 500,//移動速度
-                    //leftTop= 50,//左排起始高度
-                    //rightTop=100;//右排起始高度
-                    
-                    //if(_scrolling+_winHeight>= _position + add){}
-
-                })  
-            });
-
-        </script>
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='https://www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>title</title>
+    <link rel="stylesheet" href="style/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="http://ricostacruz.com/jquery.transit/jquery.transit.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js "></script>
+    <script src="js/script.js"></script>
+  </head>
+  <body>
+    <main class="start">
+      <header>
+        <section class="logo"></section>
+    	  <h1 class="title"></h1>
+      </header>
+      <section class="portfolio">
+        <h1>SCROLL<span>︾</span></h1>
+        <ul>
+          <li class="pi_01"></li>
+          <li class="pi_02"></li>
+          <li class="pi_03"></li>
+          <li class="pi_04"></li>
+          <li class="pi_05"></li>
+          <li class="pi_06"></li>
+          <li class="pi_07"></li>
+          <li class="pi_08"></li>
+          <li class="pi_09"></li>
+          <li class="pi_10"></li>
+          <li class="pi_11"></li>
+          <li class="pi_12"></li>
+          <li class="pi_13"></li>
+          <li class="pi_14"></li>
+          <li class="pi_15"></li>
+        </ul>
+        <article class="show">
+          <div class="pieceimg"></div>
+          <p class="intro"></p>
+        </article>
+      </section>
+      <section class="blog">
+        <ul>
+          <li class="link_01" onclick="location.href='mailto:issyoni67@gmail.com';"></li>
+          <li class="link_02" onclick="window.open('http://www.google.com/+HarryLinhappy/');"></li>
+          <li class="link_03" onclick="window.open('https://tw.linkedin.com/pub/harry-lin/a1/b12/593');"></li>
+          <li class="link_04" onclick="window.open('https://www.facebook.com/pages/%E9%A3%9B%E7%82%AB%E4%BA%A4%E9%9F%BF%E7%AE%A1%E6%A8%82%E5%9C%98/132833270108392?fref=ts');"></li>
+        </ul>
+      </section>
+      <section class="about">
+        <article class="me"></article>
+        <article class="abouttext">
+          <h1>Hello, I'm Harry.</h1>
+          <p>
+            I’m a web designer with experience of planning, programming, solving and maintaining websites. Organised the needs and balanced between functional technology skills and creative interactive design. A team player and quick-learner with passion in solving challenging problems. Collaborated with various clients and departments. With the fundamental of art and engineering, I can integrate the difference and upgrade it to a higher level.<br>
+            <br>
+            HTML/HTML5/CSS/CSS3/jQuery/Javascript/<br>Multi-browsers/Adobe Illustrator/Adobe Photoshop/Adobe Flash/Corel Painter/Responsive Website Design<br>
+          </p>
+        </article>
+      </section>
+      <section class="contact">
+        <article><h1>Site Under Construction</h1></article>
+      </section>
+      <nav>
+        <ul>
+          <li class="nu_1">POrtfolio</li>
+          <li class="nu_2">COntact</li>
+          <li class="nu_3">ABout</li>
+          <li class="nu_4">BLog</li>
+        </ul>
+        <svg width="656">
+        <path d="M7,120 Q328,-100 649,120"
+          style="stroke-linecap:round;stroke-width:8;stroke:#FBBA7A; fill:white;"/>
+        </svg>
+        <footer>
+          <section class="llogo"></section><h1 class="ltitle"></h1>
+        </footer>
+      </nav>
+  </body>
 </html>
